Add back in publishers, series, basic references
This adds back in the Publisher, Series, and Reference classes, along
with the associated controllers and changes to openapi.yaml.
